kubernetes/ingress/be-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend
  labels:
    name: backend
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    # - host: backend.play-nooax-ai-with.me
     - http:
        paths:
        - path: /$
          pathType: Exact
          backend:
            service:
              name: service-registry-svc
              port:
                number: 8761
        - path: /(eureka)(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: service-registry-svc
              port:
                number: 8761
        - path: / 
          pathType: Prefix
          backend:
            service:
              name: api-gateway-svc
              port:
                number: 9191
