kubernetes/ingress/fe-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  labels:
    name: frontend
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    # - host: frontend.play-nooax-ai-with.me
     - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service-svc
                port:
                  number: 80
